--- a/bundles/bundles.properties
+++ b/bundles/bundles.properties
@@ -1,4 +1,4 @@
 block.vault-mods-ultimate-vault.name = Ultimate Vault
-block.vault-mods-ultimate-vault.description = the ultimate safe
+block.vault-mods-ultimate-vault.description = The Ultimate vault
 zone.vault-mods-silver-crags.name = Silver Crags
-zone.vault-mods-silver-crags.description = Salt and silver lie here.
+zone.vault-mods-silver-crags.description = Salt and silver lie here
