--- a/bundles/bundles.properties
+++ b/bundles/bundles.properties
@@ -1,2 +1,2 @@
-block.vault-mods-ultimate-vault.name = Ultimate Vault
-block.vault-mods-ultimate-vault.description = The Ultimate vault
+block.vault-mods-ultimate-vault.name = "Ultimate Vault"
+block.vault-mods-ultimate-vault.description = "The Ultimate vault"
