--- a/bundles/bundles.properties
+++ b/bundles/bundles.properties
@@ -1,2 +1,6 @@
 block.Vault-mods-ultimate-vault.name = "Ultimate Vault"
 block.Vault-mods-ultimate-vault.description = "The Ultimate vault"
+block.Vault-mods-silver-turret.name = "Silver Turret"
+block.Vault-mods-silver-turrett.description = "A useless turret"
+block.Vault-mods-ore-silver.name = "Silver Ore"
+block.Vault-mods-ore-silver.description = "A shiny metal"
