--- a/bundles/bundles.properties
+++ b/bundles/bundles.properties
@@ -4,3 +4,7 @@ block.Vault-mods-silver-turret.name = "Silver Turret"
 block.Vault-mods-silver-turrett.description = "A useless turret"
 block.Vault-mods-ore-silver.name = "Silver Ore"
 block.Vault-mods-ore-silver.description = "A shiny metal"
+block.Vault-mods-electrum-conveyor.name = "Electrum Conveyor"
+block.Vault-mods-electrum-conveyor.description = "A fast Conveyor"
+block.Vault-mods-electrum-forge.name = "Electrum Forger"
+block.Vault-mods-electrum-forge.description = "Smelts silver and Gold to create Electrum"
