--- a/bundles/bundles.properties
+++ b/bundles/bundles.properties
@@ -8,3 +8,9 @@ block.Vault-mods-electrum-conveyor.name = "Electrum Conveyor"
 block.Vault-mods-electrum-conveyor.description = "A fast Conveyor"
 block.Vault-mods-electrum-forge.name = "Electrum Forger"
 block.Vault-mods-electrum-forge.description = "Smelts silver and Gold to create Electrum"
+block.Vault-mods-gold-sand.name = "Golden Sand"
+block.Vault-mods-gold-sand.description = "Gold sand"
+block.Vault-mods-silver-crucible.name = "Silver Crucible"
+block.Vault-mods-silver-crucible.description = "Melts Silver"
+
+
