--- a/bundles/bundles.properties
+++ b/bundles/bundles.properties
@@ -13,4 +13,11 @@ block.Vault-mods-gold-sand.description = "Gold sand"
 block.Vault-mods-silver-crucible.name = "Silver Crucible"
 block.Vault-mods-silver-crucible.description = "Melts Silver"
 
-
+item.example-mod-electrum.name = "Electrum" 
+item.example-mod-electrum.description = "A strange material"
+item.example-mod-gold-powder.name = "Gold Powder"
+item.example-mod-gold-powder.description = "A rare powder"
+item.example-mod-silver.name = "Silver"
+item.example-mod-silver.description = "A shiny metal"
+liquid.example-mod-molten-silver.name = "Molten Silver"
+liquid.example-mod-molten-silver.description = "A melted form of silver"
