--- a/bundles/bundles.properties
+++ b/bundles/bundles.properties
@@ -21,3 +21,9 @@ item.example-mod-silver.name = "Silver"
 item.example-mod-silver.description = "A shiny metal"
 liquid.example-mod-molten-silver.name = "Molten Silver"
 liquid.example-mod-molten-silver.description = "A melted form of silver"
+
+
+zone.example-mod-silver-crags.name = "Silver Crags"
+zone.example-mod-silver-crags.description = "Here lies silver"
+
+
