Fixed profect name calling

--- a/bundles/bundles.properties
+++ b/bundles/bundles.properties
@@ -13,17 +13,17 @@ block.Vault-mods-gold-sand.description = "Gold sand"
 block.Vault-mods-silver-crucible.name = "Silver Crucible"
 block.Vault-mods-silver-crucible.description = "Melts Silver"
 
-item.example-mod-electrum.name = "Electrum" 
-item.example-mod-electrum.description = "A strange material"
-item.example-mod-gold-powder.name = "Gold Powder"
-item.example-mod-gold-powder.description = "A rare powder"
-item.example-mod-silver.name = "Silver"
-item.example-mod-silver.description = "A shiny metal"
-liquid.example-mod-molten-silver.name = "Molten Silver"
-liquid.example-mod-molten-silver.description = "A melted form of silver"
+item.Vault-mods-electrum.name = "Electrum" 
+item.Vault-mods-electrum.description = "A strange material"
+item.Vault-mods-gold-powder.name = "Gold Powder"
+item.Vault-mods-gold-powder.description = "A rare powder"
+item.Vault-mods-silver.name = "Silver"
+item.Vault-mods-silver.description = "A shiny metal"
+liquid.Vault-mods-molten-silver.name = "Molten Silver"
+liquid.Vault-mods-molten-silver.description = "A melted form of silver"
 
 
-zone.example-mod-silver-crags.name = "Silver Crags"
-zone.example-mod-silver-crags.description = "Here lies silver"
+zone.Vault-mods-silver-crags.name = "Silver Crags"
+zone.Vault-mods-silver-crags.description = "Here lies silver"
 
 
