Added Golden was

--- a/bundles/bundles.properties
+++ b/bundles/bundles.properties
@@ -25,5 +25,7 @@ liquid.Vault-mods-molten-silver.description = "A melted form of silver"
 
 zone.Vault-mods-silver-crags.name = "Silver Crags"
 zone.Vault-mods-silver-crags.description = "Here lies silver"
+zone.Vault-mods-golden-wastes.name = "Golden Wastes"
+zone.Vault-mods-golden-wastes.description = "A waste land with golden sandr"
 
 
