--- a/bundles/bundles.properties
+++ b/bundles/bundles.properties
@@ -12,6 +12,10 @@ block.Vault-mods-gold-sand.name = "Golden Sand"
 block.Vault-mods-gold-sand.description = "Gold sand"
 block.Vault-mods-silver-crucible.name = "Silver Crucible"
 block.Vault-mods-silver-crucible.description = "Melts Silver"
+block.Vault-mods-gold-forge.name = "Gold forge"
+block.Vault-mods-gold-forge.description = "Smelts gold powder into pure gold, used in crafting"
+block.Vault-mods-gold-turret.name = "Gold Turret"
+block.Vault-mods-gold-turret.description = "An upgraded version of the duo"
 
 item.Vault-mods-electrum.name = "Electrum" 
 item.Vault-mods-electrum.description = "A strange material"
@@ -21,6 +25,8 @@ item.Vault-mods-silver.name = "Silver"
 item.Vault-mods-silver.description = "A shiny metal"
 liquid.Vault-mods-molten-silver.name = "Molten Silver"
 liquid.Vault-mods-molten-silver.description = "A melted form of silver"
+item.Vault-mods-gold.name = "Gold" 
+item.Vault-mods-gold.description = "A shiny yellow metal"
 
 
 zone.Vault-mods-silver-crags.name = "Silver Crags"
