--- a/bundles/bundles.properties
+++ b/bundles/bundles.properties
@@ -16,6 +16,8 @@ block.Vault-mods-gold-forge.name = "Gold forge"
 block.Vault-mods-gold-forge.description = "Smelts gold powder into pure gold, used in crafting"
 block.Vault-mods-gold-turret.name = "Gold Turret"
 block.Vault-mods-gold-turret.description = "An upgraded version of the duo"
+block.Vault-mods-gold-wall.name = "Gold Turret"
+block.Vault-mods-gold-wall.description = "An upgraded version of the duo"
 
 item.Vault-mods-electrum.name = "Electrum" 
 item.Vault-mods-electrum.description = "A strange material"
