--- a/bundles/bundles.properties
+++ b/bundles/bundles.properties
@@ -18,6 +18,9 @@ block.Vault-mods-gold-turret.name = "Gold Turret"
 block.Vault-mods-gold-turret.description = "An upgraded version of the duo"
 block.Vault-mods-gold-wall.name = "Gold Turret"
 block.Vault-mods-gold-wall.description = "An upgraded version of the duo"
+block.Vault-mods-silver-wall.name = "Silver Wall"
+block.Vault-mods-silver-wall.description = "A silver wall"
+
 
 item.Vault-mods-electrum.name = "Electrum" 
 item.Vault-mods-electrum.description = "A strange material"
